--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,8 +10,8 @@
     {{/if}}
     {{#if is_linkedin}}
       <br>Hi <strong>{{name.givenName}}</strong>,</br>
-      <br>Your linkedin token is: <strong>{{token}}</strong></br>
-      <br>and linkedin token secret is: <strong>{{token_secret}}</strong></br>
+      <br>Your linkedin id is: <strong>{{id}}</strong></br>
+      <br>Your linkedin token is: <strong>{{access_token}}</strong></br>
     {{/if}}
   {{/with}}
 {{/if}}
